# openmodelica-python-gym

./: .gitignore  TODO  compile_docker_image.sh  generate.sh  install_on_docker.sh  installation.txt  omc_gym_lib  requirements.txt  setup.py  test.py
docker/: Dockerfile
example/motor_model/: DrivedMotor.mo  main.py
example/motor_model/motor_model/: DrivedMotor.mo
motor_model/: DrivedMotor.mo
openmodelica-python-gym/env/: modelica.py
openmodelica-python-gym/omc/: omc_runner.py
openmodelica-python-gym/protocol/: python_gym.proto
openmodelica_python_gym/: __init__.py
openmodelica_python_gym/env/: __init__.py  modelica.py
openmodelica_python_gym/external_lib/grpc_interface/: CMakeLists.txt  grpc_interface.cc  grpc_interface.h
openmodelica_python_gym/grpc/: __init__.py  grpc.py
openmodelica_python_gym/omc/: __init__.py  external_runner.py  omc_runner.py
openmodelica_python_gym/omc_gym_lib/: package.mo  package.order
openmodelica_python_gym/omc_gym_lib/BaseClasses/: Emitter.mo  Receiver.mo  package.mo  package.order
openmodelica_python_gym/util/: __init__.py  find_omc_interface.py
